[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transforms"
version = "0.2.1"
description = "Python transforms"
readme = "README.md"
authors = [{ name = "Mikhail Kashkin", email = "mkashkin@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["html", "sgml", "transforms"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/xen/transforms"
